WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99385
Fix GraphicsLayer visible rect computation when scrolling in WebKit1
https://bugs.webkit.org/show_bug.cgi?id=99385
Summary
Fix GraphicsLayer visible rect computation when scrolling in WebKit1
Simon Fraser (smfr)
Reported
2012-10-15 16:35:31 PDT
Fix GraphicsLayer visible rect computation when scrolling in WebKit1
Attachments
Patch
(5.53 KB, patch)
2012-10-15 16:38 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(15.21 KB, patch)
2012-10-15 18:04 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2012-10-15 16:38:36 PDT
Created
attachment 168807
[details]
Patch
Simon Fraser (smfr)
Comment 2
2012-10-15 18:04:16 PDT
Created
attachment 168826
[details]
Patch
Dean Jackson
Comment 3
2012-10-15 18:08:18 PDT
Comment on
attachment 168826
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=168826&action=review
> Source/WebCore/rendering/RenderLayerCompositor.cpp:300 > + IntRect exposedRect = m_clipLayer ? IntRect(IntPoint(), frameView->contentsSize()) : frameView->visibleContentRect(); > + rootLayer->flushCompositingState(exposedRect);
Do you really need the variable?
Simon Fraser (smfr)
Comment 4
2012-10-15 18:18:07 PDT
http://trac.webkit.org/changeset/131393
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug